--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,3 +1,27 @@
+// Google Fonts
+@import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700") // Logo (Bold: 700)
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700,300") // Body (Light: 300, Normal: 400, Bold: 700)
+
+// Override Bulma vars BEFORE loading bulma
+$family-sans: 'Roboto', Helvetica, Arial, sans-serif
+$family-primary: $family-sans
+
+// Import CSS framework
+// http://bulma.io
 @import "~bulma"
 
+// Site styles
+.sidebar 
+  width: 300px
 
+.nav
+  min-height: 60px
+
+.logo
+  font-size: 1.6em
+  font-weight: 700
+  color: #444 !important
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  img
+    opacity: 0.7
+    margin-right: 0.3em
