Separate out dashboard to a container for state.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -17,6 +17,9 @@ $family-primary: $family-sans
 .nav
   min-height: 60px
 
+.tabs a 
+  text-transform: capitalize
+
 .logo
   font-size: 1.6em
   font-weight: 700
