--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -12,19 +12,41 @@ $family-primary: $family-sans
 
 // Site styles
 .sidebar 
-  width: 300px
+  width: 200px
+  padding-right: 2em
 
 .nav
   min-height: 60px
+  margin-bottom: 2em
+  border-bottom: 1px solid $border
 
-.tabs a 
-  text-transform: capitalize
+.scoreboard
+  margin-bottom: 3em !important
+  padding-bottom: 0.5em
+  padding-top: 0.5em
+  border-top: 1px solid $border
+  border-bottom: 1px solid $border
+  margin-left: -20px
+  margin-right: -20px
+  background-color: $grey-lighter
+
+.page-heading
+  margin-bottom: 1em
+
+.menu
+  a
+    text-transform: capitalize
+  .icon
+    position: relative
+    top: 1px
+    margin-right: 0.4em
+    opacity: 0.75
 
 .logo
   font-size: 1.6em
   font-weight: 700
-  color: #444 !important
+  color: #666 !important
   font-family: 'Yanone Kaffeesatz', sans-serif;
   img
-    opacity: 0.7
+    opacity: 0.6
     margin-right: 0.3em
