--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -9,8 +9,14 @@ $family-primary: $family-sans
 // Import CSS framework
 // http://bulma.io
 @import "~bulma"
+@import "animate.css"
 
 // Site styles
+.loading 
+  width: 50px;
+  height: 50px;
+  margin: 10em auto 2em
+  
 .sidebar 
   width: 200px
   padding-right: 2em
