--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -16,7 +16,14 @@ $family-primary: $family-sans
   width: 50px;
   height: 50px;
   margin: 10em auto 2em
-  
+
+.table
+  color: inherit
+  .icon
+    float: right
+    position: relative
+    top: 2px
+
 .sidebar 
   width: 200px
   padding-right: 2em
