--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -21,7 +21,7 @@ $family-primary: $family-sans
   color: inherit
   .date
     white-space: nowrap
-  .icon
+  th .icon
     float: right
     position: relative
     top: 2px
@@ -33,6 +33,8 @@ table.breakdown
     text-align: center
   .name
     text-align: left
+  .icon
+    float: none
 
 .sidebar 
   width: 200px
