--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -19,6 +19,7 @@ $family-primary: $family-sans
 
 .table
   color: inherit
+  background-color: transparent
   .date
     white-space: nowrap
   th .icon
@@ -36,30 +37,61 @@ table.breakdown
   .icon
     float: none
 
+.brand
+  height: 80px
+  background-color: #FF5E3B
+  padding-top: 15px
+
 .sidebar 
-  width: 200px
-  padding-right: 2em
+  width: 240px
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  background-color: #3D4353
+
+.wrapper
+  margin-left: 240px
+
+.main
+  padding: 100px 30px 30px
 
 .nav
   margin-bottom: 2em
   border-bottom: 1px solid $border
 
 .scoreboard
-  margin-bottom: 3em !important
+  margin: 0 -30px 3em !important
   padding-bottom: 1em
-  padding-top: 1em
-  border-top: 1px solid $border
   border-bottom: 1px solid $border
-  margin-left: -20px
-  margin-right: -20px
   background-color: $grey-lighter
 
 .page-heading
   margin-bottom: 1em
+  background-color: #fff
+  // border-bottom: 1px solid $border
+  height: 80px
+  padding: 13px 30px
+  width: 100%
+  position: fixed
+  z-index: 1
+  top: 0
+  left: 240px
 
 .menu
+  padding: 20px
+  .menu-label
+    opacity: 0.5
   a
     text-transform: capitalize
+    color: $grey
+    padding-top: 8px
+    padding-bottom: 8px
+    &:hover
+      color: #ff6e4f
+      background-color: transparent
+    &.is-active
+      background-color: rgba(#fff, 0.1)
   .icon
     position: relative
     top: 1px
@@ -67,10 +99,13 @@ table.breakdown
     opacity: 0.75
 
 .logo
-  font-size: 1.6em
+  font-size: 1.8em
+  padding: 20px
   font-weight: 700
-  color: #666 !important
+  color: #fff !important
   font-family: 'Yanone Kaffeesatz', sans-serif;
   img
-    opacity: 0.6
     margin-right: 0.3em
+    width: 30px
+    position: relative
+    top: 5px
