--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -74,8 +74,6 @@ table.breakdown
   padding: 1em 0
   border-bottom: 1px solid $border
   background-color: $grey-lighter
-  .level-item
-    opacity: 0.8
 
 .card-header
   background-color: $grey-lighter
@@ -111,6 +109,20 @@ table.breakdown
     top: 1px
     margin-right: 0.4em
     opacity: 0.75
+
+.dashboard-content
+  padding: 6px 0 0 3%
+  .section-head
+    border-bottom: 1px solid $border
+    padding-bottom: 0.4em
+    margin-bottom: 0
+
+.provider-break-card
+  padding: 2em 0
+  .icon
+    opacity: 0.7
+  .title
+    margin-top: 5px
 
 .logo
   font-size: 1.8em
