--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -118,11 +118,11 @@ table.breakdown
     margin-bottom: 0
 
 .provider-break-card
-  padding: 2em 0
+  padding: 2em 0  1em !important
   .icon
     opacity: 0.7
   .title
-    margin-top: 5px
+    margin-top: 2px
 
 .logo
   font-size: 1.8em
